@@ -4,7 +4,7 @@ use strict;
 use Class::C3;
 
 use HTML::FormFu::Attribute qw( mk_item_accessors mk_accessors mk_inherited_accessors );
-use HTML::FormFu::ObjectUtil qw( populate form name parent );
+use HTML::FormFu::ObjectUtil qw( populate form name parent get_parent );
 use Scalar::Util qw( reftype );
 use Carp qw( croak );
 
